Fixes - Adaptive sizes
Fixed layout when the resolution changes or you go from a desktop to a
mobile device.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Personal Portfolio Page</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+<link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
     
     
     <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
@@ -56,20 +58,22 @@
 	<!--Pagebreak - About-Me-Page-->	
 	<div class="page" id="aboutmepage">
 		<div class="row" id="aboutme">
-			<div class="col-xs-1"></div>
-			<div class="col-xs-4">
-				<h3 class="title-text title-medium shadowed whited">Rust Web Development</h3>
+			<div class="col-md-1"></div>
+			<div class="col-md-4">
+				<div id="aboutstuff">
+					<h3 class="title-text title-medium shadowed whited">Rust Web Development</h3>
 				<p class="paragraph-text">I'm a self-taught web developer, photographer, and programmer. Based in Atlanta, Georgia, I'm currently honing my skills by working on full stack projects. I have a passion for building functional projects that help people.</p>
 				<h4 class="title-text title-small shadowed whited">Languages & Frameworks</h4>
 				<p class="paragraph-text">HTML5, CSS3, Javascript, Java, Bootstrap</p>
 				<h4 class="title-text title-small shadowed whited">Tools</h4>
 				<p class="paragraph-text">Photoshop, Eclipse, Excel</p>
+				</div>
 			</div>
-			<div class="col-xs-2"></div>
-			<div class="col-xs-4">
+			<div class="col-md-2"></div>
+			<div class="col-md-4">
 				<img id="portrait" src="http://tinyurl.com/j74dl9s">
 			</div>
-			<div class="col-xs-1"></div>
+			<div class="col-md-1"></div>
 		</div>	
 
 	</div>
@@ -133,21 +137,21 @@
 	</div>
 	<!--Pagebreak - Contact-Page-->
 	<div class="page" id="contactpage">
-		<div id="contactsection">	
+		<div id="contactsection" style="padding-left: 10px;">	
 			<div class="row">
-				<div class="col-xs-1"></div>
-				<div class="col-xs-4">
+				<div class="col-md-1"></div>
+				<div class="col-md-4" style="margin-bottom: 50px;">
 					<h3 class="title-text title-medium shadowed whited">Connect with me:</h3>
 					<h4 class="title-text title-small shadowed whited">jordan.rust92@gmail.com</h4>
 				</div>
-				<div class="col-xs-2"></div>
-				<div class="col-xs-3">
+				<div class="col-md-2"></div>
+				<div class="col-md-3">
 					<a href="https://github.com/NyxHemera" class="socialbtn btn morph" style="margin-right: 100%;"><i class="fa fa-github"></i> Github</a>
 					<a href="http://tinyurl.com/h4tre46" class="socialbtn btn morph" style="margin-right: 100%;"><i class="fa fa-linkedin-square"></i>
 						LinkedIn</a>
 					<a href="https://www.facebook.com/jordan.rust.98" class="socialbtn btn morph" style="margin-right: 100%;"><i class="fa fa-facebook-square"></i> Facebook</a>
 				</div>
-				<div class="col-xs-2"></div>
+				<div class="col-md-2"></div>
 			</div>
 		</div>
 	</div>	
