Overlays and More Adaptive Styling
The portfolio page now has overlays giving titles and descriptions. The
portfolio items also now adapt to the size of the device and change
position to better display content.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			</div>
 			<div class="col-md-2"></div>
 			<div class="col-md-4">
-				<img id="portrait" src="http://tinyurl.com/j74dl9s">
+<!--				<img id="portrait" src="http://tinyurl.com/j74dl9s"> -->
 			</div>
 			<div class="col-md-1"></div>
 		</div>	
@@ -89,49 +89,107 @@
 		</div>	
 
 		<div class="row port-row">
-			<div class="col-xs-2"></div>
-			<div class="col-xs-2 port-cell">
-				<img src="http://tinyurl.com/hg5eex3" class="img-responsive">
+			<div class="col-md-2"></div>
+			<div class="col-md-2 port-cell">
+				<img src="https://36ac30c13130509695cc52edff7cc9aaed02b916.googledrive.com/host/0B-hZ9xIoiYFbcXhQejBRLXR6NGc/pomodoro-icon.jpg" class="img-responsive">
+				<a href="http://codepen.io/NyxHemera/full/RrrqaW/">
+				<div class="overlay withfadein">
+					<div class="overlaywithin text-center">
+						<h2 class="text-overlay-title">Pomodoro Clock</h2>
+						<h3 class="text-overlay-description">Bootstrap and Javascript</h3>
+					</div>
+				</div>
+				</a>
 			</div>
-			<div class="col-xs-1 port-divide"></div>
-			<div class="col-xs-2 port-cell">
-				<img src="http://tinyurl.com/hg5eex3" class="img-responsive">
+			<div class="col-md-1 port-divide"></div>
+			<div class="col-md-2 port-cell">
+				<img src="https://36ac30c13130509695cc52edff7cc9aaed02b916.googledrive.com/host/0B-hZ9xIoiYFbcXhQejBRLXR6NGc/rcg-icon.jpg" class="img-responsive">
+				<a href="http://codepen.io/NyxHemera/full/JGYVOJ/">
+				<div class="overlay withfadein">
+					<div class="overlaywithin text-center">
+						<h2 class="text-overlay-title">Quote Generator</h2>
+						<h3 class="text-overlay-description">Bootstrap and Javascript</h3>
+					</div>
+				</div>
+				</a>
 			</div>
-			<div class="col-xs-1 port-divide"></div>
-			<div class="col-xs-2 port-cell">
+			<div class="col-md-1 port-divide"></div>
+			<div class="col-md-2 port-cell">
 				<img src="http://tinyurl.com/hg5eex3" class="img-responsive">
+				<div class="overlay withfadein">
+					<div class="overlaywithin text-center">
+						<h2 class="text-overlay-title"></h2>
+						<h3 class="text-overlay-description"></h3>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-2"></div>
+			<div class="col-md-2"></div>
 		</div>
 		<div class="row port-row">
-			<div class="col-xs-2"></div>
-			<div class="col-xs-2 port-cell">
+			<div class="col-md-2"></div>
+			<div class="col-md-2 port-cell">
 				<img src="http://tinyurl.com/hg5eex3" class="img-responsive">
+				<div class="overlay withfadein">
+					<div class="overlaywithin text-center">
+						<h2 class="text-overlay-title"></h2>
+						<h3 class="text-overlay-description"></h3>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-1"></div>
-			<div class="col-xs-2 port-cell">
+			<div class="col-md-1"></div>
+			<div class="col-md-2 port-cell">
 				<img src="http://tinyurl.com/hg5eex3" class="img-responsive">
+				<div class="overlay withfadein">
+					<div class="overlaywithin text-center">
+						<h2 class="text-overlay-title"></h2>
+						<h3 class="text-overlay-description"></h3>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-1"></div>
-			<div class="col-xs-2 port-cell">
+			<div class="col-md-1"></div>
+			<div class="col-md-2 port-cell">
 				<img src="http://tinyurl.com/hg5eex3" class="img-responsive">
+				<div class="overlay withfadein">
+					<div class="overlaywithin text-center">
+						<h2 class="text-overlay-title"></h2>
+						<h3 class="text-overlay-description"></h3>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-2"></div>	
+			<div class="col-md-2"></div>	
 		</div>
 		<div class="row port-row">
-			<div class="col-xs-2"></div>
-			<div class="col-xs-2 port-cell">
+			<div class="col-md-2"></div>
+			<div class="col-md-2 port-cell">
 				<img src="http://tinyurl.com/hg5eex3" class="img-responsive">
+				<div class="overlay withfadein">
+					<div class="overlaywithin text-center">
+						<h2 class="text-overlay-title"></h2>
+						<h3 class="text-overlay-description"></h3>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-1"></div>
-			<div class="col-xs-2 port-cell">
+			<div class="col-md-1"></div>
+			<div class="col-md-2 port-cell">
 				<img src="http://tinyurl.com/hg5eex3" class="img-responsive">
+				<div class="overlay withfadein">
+					<div class="overlaywithin text-center">
+						<h2 class="text-overlay-title"></h2>
+						<h3 class="text-overlay-description"></h3>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-1"></div>
-			<div class="col-xs-2 port-cell">
+			<div class="col-md-1"></div>
+			<div class="col-md-2 port-cell">
 				<img src="http://tinyurl.com/hg5eex3" class="img-responsive">
+				<div class="overlay withfadein">
+					<div class="overlaywithin text-center">
+						<h2 class="text-overlay-title"></h2>
+						<h3 class="text-overlay-description"></h3>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-2"></div>	
+			<div class="col-md-2"></div>	
 		</div>
 
 	</div>
